--- a/Docker-compose.yaml
+++ b/Docker-compose.yaml
@@ -6,7 +6,7 @@ services:
     image: alxdv/credit-conveyor_gateway:1.0.10
     container_name: gateway
     ports:
-      - "8080:8080"
+      - '8080:8080'
   #  Application
   application:
     image: alxdv/credit-conveyor_application:1.0.4
@@ -28,7 +28,7 @@ services:
     image: 'postgres:13.1-alpine'
     container_name: deal-db
     ports:
-      - "5433:5432"
+      - '5433:5432'
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=123
@@ -59,13 +59,13 @@ services:
     expose:
       - 9092
     ports:
-      - "9092:9092"
+      - '9092:9092'
     depends_on:
       - zookeeper
     environment:
       KAFKA_ADVERTISED_HOST_NAME: kafka
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_CREATE_TOPICS: "conveyor-finish-registration:1:1,conveyor-create-documents:1:1,conveyor-send-documents:1:1,conveyor-send-ses:1:1,conveyor-credit-issued:1:1,conveyor-application-denied:1:1,audit-action:1:1"
+      KAFKA_CREATE_TOPICS: 'conveyor-finish-registration:1:1,conveyor-create-documents:1:1,conveyor-send-documents:1:1,conveyor-send-ses:1:1,conveyor-credit-issued:1:1,conveyor-application-denied:1:1,audit-action:1:1'
   audit-db:
     image: redis:6.2-alpine
     container_name: audit-db
